[model] Add prototype of class for decomposing a model in several submodels
The concept of dividing a model in several submodels is present in several
algorithms implemented in iDynTree. What we have usually done is to
split the iCub model along the six axis F/T sensor joints, to exploit
the sensor measurement for external forces estimation and inertial parameter
identification. Support for this has been rather bad implemented in the past,
but now we can work on streamline it.

Every submodel is associated with a Traversal object, in this
way a given algorithm can run on both the full model or
on a submodel.

--- a/src/model/CMakeLists.txt
+++ b/src/model/CMakeLists.txt
@@ -17,6 +17,7 @@ set(IDYNTREE_MODEL_HEADERS include/iDynTree/Model/FixedJoint.h
                            include/iDynTree/Model/ModelTransformers.h
                            include/iDynTree/Model/MovableJointImpl.h
                            include/iDynTree/Model/RevoluteJoint.h
+                           include/iDynTree/Model/SubModel.h
                            include/iDynTree/Model/Traversal.h)
 
 set(IDYNTREE_MODEL_PRIVATE_INCLUDES)
@@ -34,6 +35,7 @@ set(IDYNTREE_MODEL_SOURCES src/FixedJoint.cpp
                            src/ModelTransformers.cpp
                            src/ModelInterfaceDestructors.cpp
                            src/RevoluteJoint.cpp
+                           src/SubModel.cpp
                            src/Traversal.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_MODEL_SOURCES})
